# touchline

./: .buildinfo  .gitignore  LICENSE  README.md  genindex.html  getting_started.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  getting_started.doctree  index.doctree
.doctrees/api/: engine.doctree  index.doctree  main.doctree  models.doctree  utils.doctree  visualizer.doctree
.github/workflows/: main.yml
_modules/: index.html
_modules/touchline/: main.html
_modules/touchline/engine/: config.html  events.html  match_engine.html  physics.html  player_state.html  roles.html
_modules/touchline/models/: player.html  team.html
_modules/touchline/utils/: debug.html  (+2 more)
_sources/api/: index.rst.txt  main.rst.txt  models.rst.txt  utils.rst.txt  visualizer.rst.txt
api/: engine.html  index.html  main.html  models.html  utils.html  visualizer.html
data/: players.json
docs/: Makefile  conf.py  getting_started.rst  index.rst  make.bat
docs/api/: engine.rst  index.rst  utils.rst
tests/: test_docstrings.py  test_forwards.py  test_midfielders.py  test_models.py  test_physics.py  test_restarts.py  test_utils.py
tools/: analyze_match_log.py  repro_pass.py  run_short_engine.py
touchline/: __init__.py  main.py
touchline/engine/: __init__.py  config.py  events.py  match_engine.py  physics.py  player_state.py  referee.py
touchline/models/: __init__.py  player.py  team.py
touchline/utils/: __init__.py  debug.py  generator.py  roster.py
touchline/visualizer/: __init__.py  visualizer.py
(+12 files in other folders)
